--- a/3columnsite/index.html
+++ b/3columnsite/index.html
@@ -47,6 +47,7 @@
         </div><!--/.tertiary-->
     </div>
 
+    <div></div>
     <footer class="main-footer">
         <div class="footer-inner"><span>&copy;2015 Residents of The Best City Ever.</span>
         </div>
